Update bio to reflect new specialization

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "Eleneprofile.png"
   name             : "Elene Lominadze"
   pronouns         : # example: "she/her"  
-  bio              : "Machine Learning and Bioinformatics"
+  bio              : "Machine Learning and Computational Neuroscience"
   location         : "Oxford"
   employer         : "University of Oxford"
   uri              : # URL
